<?xml version="1.0"?>
<package format="2">
  <name>moveit_by_name</name>
  <version>0.0.0</version>
  <description>Shortcut to allow arbitrary scripts to move the robot to predefined targets without using any MoveIt interface</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_ros_planning_interface</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
